--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,9 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.39.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "typescript": "5.9.2"
   }
 }
