--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   },
   "dependencies": {
     "pg": "^8.18.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
   }
 }
